--- a/requirements.txt
+++ b/requirements.txt
@@ -150,9 +150,10 @@ websockets==16.0
 Werkzeug==2.3.7
 widgetsnbextension==4.0.14
 yfinance==1.1.0
-streamlit
-pandas
-plotly
-scikit-learn
-yfinance
-numpy
+streamlit>=1.30
+pandas>=2.0
+plotly>=5.18
+scikit-learn>=1.3
+yfinance>=0.2
+numpy>=1.24
+
